# homepal

./: README.md  main.py  pyproject.toml
docs/wiki/: how-homepal-works.md
homepal/: __init__.py  config.py  db.py
homepal/migrations/: README.md
homepal/migrations/versions/: 20260302_01_seed_asset_categories.py  20260302_02_seed_attribute_definitions.py  20260307_03_expand_asset_and_room_classifications.py
homepal/models/: __init__.py  core.py
homepal/services/: __init__.py  asset_service.py  backup_service.py  room_service.py  task_service.py
homepal/utils/: __init__.py  labels.py
homepal/views/: main_window.py
homepal/widgets/: __init__.py  calendar_panel.py  dashboard_panel.py  metadata_factory.py  metadata_form.py  reports_panel.py  rooms_assets_panel.py  task_panel.py
tests/: test_task_service.py  test_topology_service.py
