[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homepal"
version = "0.1.0"
description = "Native Linux home operations manager"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "tomli-w>=1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["homepal", "homepal.models", "homepal.services", "homepal.views", "homepal.widgets"]
